# tsproj_ml

./: README.md  exp_forecasting_ml.py  main_ml.py  main_ml_todo.py  pyproject.toml  test.py
config/: config.yaml  load_config.py  model_config.py
data_provider/: data_loader.py  data_loader_lgb.py  outlier_process.py
docs/: 基于非线性树模型的时间序列预测框架：从策略原理到工业级部署的深度研究报告.md  时间序列预测模型完善.md
docs/ml_todo/: ETTh1_xgboost_interval.py  USMDR和MSMDR方法完整实现.py  exp_forecasting_ml_gemini.py  优化的特征预处理模块.py  归一化和类别特征优化方案.md
docs/ml_todo/files-1/: 优化成果总结.md
docs/ml_todo/files-2/: INTEGRATION_GUIDE.md  enhanced_features.py  model_abstraction.py  model_ensemble.py
docs/ml_todo/files-3/: exp_forecasting_ml_v3_optimized.py  exp_forecasting_ml_v3_完整优化版.py  优化脚本使用说明.md  完整交付总结.md  完整优化脚本使用说明.md  快速集成补丁.py
features/: AdvancedFeatures.py  BasicFeatures.py  DataAugment.py  FeaturePreprocessor.py  FeatureSelection.py  TODO-data_augment.py  TODO-feature_selection.py  data_augment.py  outlier_process.py
ml_todo/: 7种预测方法详细对比.md  FIXES_AND_ADDITIONS.md  MITSUI_CO_catboost.py  MSMD方法修复版.py  USMDR和MSMDR集成指南.md  exp_forecasting_ml_claude.py  补充和修复代码.py
ml_todo/files-1/: README_优化说明.md  时间序列预测框架优化报告.md
ml_todo/files-2/: README.md  enhanced_features.py
models/: ModelEnsemble.py  ModelFactory.py  TODO-learning_rate.py  TODO-losses.py  learning_rate.py
models/todo/: TODO-losses.py  exp_lgbm.py
models_ml/: exp_forecasting_ml.py
strategies/: BaseStrategy.py  PredictionStrategies.py  PredictionStrategy.py
